@@ -5,6 +5,8 @@
 	--debug, --syslog-debug, --version. Fixed a bug for the current number
 	of players. Added the servername to the syslog output.
 	* client/gtk/data/Makefile.am: Added splash.svg to the tarball.
+	* common/state.c, server/player.c, server/trade.c, server/server.h,
+	server/pregame.c: Reconnect during trade.
 
 2006-09-07  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/data/Makefile.am: Add rule for splash.png
